test/testzillians-compiler/ThorScriptCompilerStaticTest/data/error/3_statement/MISSING_CONTINUE_TARGET.t
function f():void
{
    if(true)
    {
        @static_test { expect_message={ level="LEVEL_ERROR", id="MISSING_CONTINUE_TARGET" } }
        continue;
    }
}
